Tagging 1.4-RC1
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/pool/tags/POOL_1_4_RC1@607244 13f79535-47bb-0310-9956-ffa450edef68